--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,4 +1,4 @@
-html { font-size: 20px; }
+html { font-size: 18px; }
 
 body {
     margin: 0;
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     overflow-x: hidden;
-    font-family: 'Poppins', sans-serif !important;
+    font-family: "Poppins", sans-serif;
 }
 
 main {
